# mcp-logseq

./: .gitignore  LICENSE  LOGSEQ_API_ARCHITECTURE.md  README.md  ROADMAP.md  VECTOR_SEARCH.md  pyproject.toml
assets/: architecture.dot
src/mcp_logseq/: config.py  logseq.py  parser.py  server.py  tools.py
src/mcp_logseq/vector/: __init__.py  chunker.py  db.py  embedder.py  index.py  state.py  sync.py  types.py
tests/: conftest.py
tests/integration/: test_mcp_server.py
tests/unit/: test_db_properties.py  test_exclude_tags.py  test_logseq_api.py  test_parser.py  test_property_persistence.py  test_tool_handlers.py
tests/unit/vector/: test_chunker.py  test_config.py  test_embedder.py  test_index.py  test_logseq_sync.py  test_state.py  test_sync.py
